--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 50px auto;
+  margin: 30px auto;
 }
 
 .head-bg {
@@ -63,6 +63,7 @@ body {
   height: 300px;
   padding: 45px;
   background-color: #ffffff;
+  /* margin-bottom: 50px; */
 }
 
 .pricing-container {
@@ -96,6 +97,7 @@ body {
   outline: none;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
+  overflow: hidden;
 }
 
 .slider::-webkit-slider-thumb {
@@ -109,6 +111,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-color: #10d5c2;
+  box-shadow: -407px 0 0 400px #10d5c2;
   cursor: pointer;
 }
 
@@ -121,6 +124,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-color: #10d5c2;
+  box-shadow: #10d5c2;
   cursor: pointer;
 }
 
@@ -208,6 +212,10 @@ input:focus + .switch-slider {
   border-radius: 30px;
 }
 
+.mobile {
+  display: none;
+}
+
 hr {
   width: 100%;
   margin: 30px auto;
@@ -245,4 +253,14 @@ hr {
   border-radius: 35px;
   width: 200px;
   cursor: pointer;
+}
+
+.attribution {
+  text-align: center;
+  padding: 25px;
+}
+
+.attribution a {
+  text-decoration: none;
+  color: red;
 }
